--- a/index.html
+++ b/index.html
@@ -22,37 +22,37 @@
 
         <div class="item">
             <h3 class="item-name">Bolo de Chocolate</h3>
-            <img src="imagens/boloch.png" class="img-ch" alt="Bolo de Chocolate">
+            <img src="imagens/Bolo de chocolate.png" class="img-ch" alt="Bolo de Chocolate">
             <p class="item-description">Delicioso bolo de chocolate com cobertura de ganache.</p>
-            <p class="item-price">R$ 50,00</p>
+            <p class="item-price">R$ 80,00</p>
         </div>
 
         <div class="item">
             <h3 class="item-name">Bolo de Morango</h3>
             <img src="imagens/Bolo de Morango.png" class="img" alt="Bolo de Morango">
             <p class="item-description">Saboroso bolo de morango com recheio cremoso.</p>
-            <p class="item-price">R$ 55,00</p>
+            <p class="item-price">R$ 95,00</p>
         </div>
 
         <div class="item">
             <h3 class="item-name">Bolo de Cenoura</h3>
-            <img src="imagens/bolodecenoura.png" class="img" alt="Bolo de Cenoura">
-            <p class="item-description">Bolo de cenoura com cobertura de chocolate branco.</p>
-            <p class="item-price">R$ 35,00</p>
+            <img src="imagens/bolocenoura.png" class="img" alt="Bolo de Cenoura">
+            <p class="item-description">Bolo de cenoura com cobertura de chocolate.</p>
+            <p class="item-price">R$ 50,00</p>
         </div>
 
         <div class="item">
             <h3 class="item-name">Bolo de Limão</h3>
             <img src="imagens/bololimão.png" class="img" alt="Bolo de Limão">
             <p class="item-description">Refrescante bolo de limão com raspas de casca de limão.</p>
-            <p class="item-price">R$ 38,00</p>
+            <p class="item-price">R$ 48,00</p>
         </div>
 
         <div class="item">
             <h3 class="item-name">Bolo de Baunilha</h3>
             <img src="imagens/bolobaunilha.png" class="img" alt="Bolo de Baunilha">
             <p class="item-description">Um sabor clássico que sempre brilha, O bolo de baunilha é uma maravilha!</p>
-            <p class="item-price">R$ 35,00</p>
+            <p class="item-price">R$ 45,00</p>
         </div>
         <div class="location">
             <h3>Localização</h3>
