--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="item">
             <h3 class="item-name">Bolo de Baunilha</h3>
             <img src="imagens/bolobaunilha.png" class="img" alt="Bolo de Baunilha">
-            <p class="item-description">Com glacê de chantilly um clássico que sempre brilha, O bolo de baunilha é uma maravilha!</p>
+            <p class="item-description">Com glacê de chantilly um clássico que sempre brilha, o bolo de baunilha é uma maravilha!</p>
             <p class="item-price">R$ 45,00</p>
         </div>
         <div class="location">
