--- a/index.html
+++ b/index.html
@@ -113,5 +113,15 @@
         </p>
       </div>
     </div>
+    <footer class="footer">
+      <h4>
+        &copy; Marcia P. Barcelo - Todos os direitos reservados - Desenvolvedora
+        Web
+        <span class="arrow">&rarr;</span>
+        <a href="https://www.linkedin.com/in/mpbarcelo/" target="_blank">
+          Linkedin da Autora
+        </a>
+      </h4>
+    </footer>
   </body>
 </html>
