--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   </head>
 
   <body>
+    <header class="header">
+      <nav class="menu">
+        <ul>
+            <li><a href="#">Início</a></li>
+          <li><a href="#cardapio">Cardápio</a></li>
+          <li><a href="#localizacao">Localização</a></li>
+          <li><a href="#como-pedir">Como Pedir</a></li>
+        </ul>
+      </nav>
+    </header>
+    .
     <div class="container">
       <img src="imagens/painel.png" class="slogan" alt="" />
       <hr />
@@ -25,7 +36,7 @@
       <hr />
       <h1>Cardápio</h1>
 
-      <div class="item">
+      <div id="cardapio" class="item">
         <h3 class="item-name">Bolo de Chocolate</h3>
         <img
           src="imagens/Bolo de chocolate.png"
@@ -82,7 +93,7 @@
         </p>
         <p class="item-price">R$ 45,00</p>
       </div>
-      <div class="location">
+      <div id="localizacao" class="location">
         <h3>Localização</h3>
         <address>
           Endereço:
@@ -105,7 +116,7 @@
         </p>
       </div>
 
-      <div class="how-to-order">
+      <div id="como-pedir" class="how-to-order">
         <h3>Como Pedir</h3>
         <p>
           Para fazer um pedido, entre em contato pelo telefone informado acima
