--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">Início</a></li>
           <li><a href="#cardapio">Cardápio</a></li>
           <li><a href="#localizacao">Localização</a></li>
-          <li><a href="#como-pedir">Como Pedir</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -116,8 +116,8 @@
         </p>
       </div>
 
-      <div id="como-pedir" class="how-to-order">
-        <h3>Como Pedir</h3>
+      <div id="contato" class="how-to-order">
+        <h3>Realize seu pedido</h3>
         <p>
           Para fazer um pedido, entre em contato pelo telefone informado acima
           ou visite nossa loja no endereço indicado.
