estilo dos icons

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         textura em cada mordida.
       </h2>
       <hr />
-      <h1>Cardápio</h1>
+      <h1 id="cardapio">Cardápio</h1>
 
-      <div id="cardapio" class="item">
+      <div class="item">
         <h3 class="item-name">Bolo de Chocolate</h3>
         <img
           src="imagens/Bolo de chocolate.png"
